--- a/GTG/plugins/hamster/prefs.ui
+++ b/GTG/plugins/hamster/prefs.ui
@@ -4,6 +4,7 @@
   <!-- interface-naming-policy project-wide -->
   <object class="GtkDialog" id="dialog1">
     <property name="border_width">5</property>
+    <property name="title" translatable="yes">Hamster Preferences</property>
     <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
     <signal name="delete_event" handler="prefs_close"/>
