--- a/GTG/taskbrowser/taskbrowser.glade
+++ b/GTG/taskbrowser/taskbrowser.glade
@@ -865,6 +865,7 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
         <property name="label" translatable="yes">_Schedule for...</property>
         <property name="visible">True</property>
         <property name="use_underline">True</property>
+        <property name="submenu">ScheduleForContextMenu</property>
         <property name="use_stock">False</property>
       </object>
     </child>
