--- a/GTG/taskbrowser/taskbrowser.glade
+++ b/GTG/taskbrowser/taskbrowser.glade
@@ -870,6 +870,7 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
         <property name="accel_group">accelgroup1</property>
+        <property name="submenu">ScheduleForContextMenu</property>
         <signal name="activate" handler="on_edit_active_task"/>
       </object>
     </child>
