--- a/GTG/plugins/export/export.ui
+++ b/GTG/plugins/export/export.ui
@@ -172,6 +172,7 @@ view will be exported.</property>
   <object class="GtkWindow" id="preferences_dialog">
     <property name="border_width">10</property>
     <property name="window_position">center-on-parent</property>
+    <property name="type_hint">dialog</property>
     <signal name="delete_event" handler="on_preferences_dialog_delete_event"/>
     <child>
       <object class="GtkVBox" id="vbox1">
