Make dismiss button naming consistent with other button names
(This also helps in that grepping through source for instances of
'dismiss_b' are considerably easier than checking for just 'dismiss'.)

--- a/GTG/taskbrowser/taskbrowser.glade
+++ b/GTG/taskbrowser/taskbrowser.glade
@@ -374,7 +374,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkToolButton" id="dismiss">
+              <object class="GtkToolButton" id="dismiss_b">
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
                 <property name="label" translatable="yes">Dismiss</property>
