--- a/GTG/taskbrowser/taskbrowser.glade
+++ b/GTG/taskbrowser/taskbrowser.glade
@@ -540,7 +540,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkButton" id="button1">
+                      <object class="GtkButton" id="quickadd_b">
                         <property name="label">gtk-add</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
