--- a/GTG/taskbrowser/taskbrowser.glade
+++ b/GTG/taskbrowser/taskbrowser.glade
@@ -445,7 +445,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="label4">
+                      <object class="GtkLabel" id="tags_label">
                         <property name="visible">True</property>
                         <property name="xalign">0</property>
                         <property name="label" translatable="yes">Tags</property>
@@ -924,7 +924,7 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
         <property name="orientation">vertical</property>
         <property name="spacing">2</property>
         <child>
-          <object class="GtkLabel" id="label5">
+          <object class="GtkLabel" id="addtag_label">
             <property name="visible">True</property>
             <property name="label" translatable="yes">Enter the name of the tag(s) you wish to add:</property>
           </object>
@@ -947,7 +947,7 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
           </packing>
         </child>
         <child>
-          <object class="GtkLabel" id="label6">
+          <object class="GtkLabel" id="hint_label">
             <property name="visible">True</property>
             <property name="label" translatable="yes">Hint: you can add several tags by separating them with
 commas.</property>
